[package]
name = "ruspiro-interrupt-core"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.3.1" # remember to update html_root_url
description = """
Interrupt core functions to globally enable/disable interrupts on Raspberry Pi
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-interrupt/tree/v0.3.1/core"
documentation = "https://docs.rs/ruspiro-interrupt-core/0.3.1"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "interrupt"]
categories = ["no-std", "embedded"]
edition = "2018"

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-interrupt", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dependencies]

[features]
