[package]
name = "ruspiro-interrupt"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.4.2" # remember to update html_root_url
description = """
Providing a simple and convinient way to implement interrupt handler for Raspberry Pi interrupts.
"""
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RusPiRo/ruspiro-interrupt/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-interrupt/||VERSION||"
readme = "../README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "interrupt"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]
links = "ruspiro_interrupt"

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
# get functions like memset, memcpy into the binary
paste = "~1.0"
futures-util = { version = "~0.3", default-features = false, optional = true }
ruspiro-mmio-register = "~0.1"
ruspiro-interrupt-macros = { path = "../macros", version = "~0.3" }
ruspiro-singleton = "~0.4"
ruspiro-channel = "~0.1"

[features]
ruspiro_pi3 = []
async = ["futures-util", "ruspiro-interrupt-macros/async", "ruspiro-channel/async" ]

